# Kloud-Personal

./: Cargo.toml  LICENSE  README.md
assets/: index.html
assets/js/: app.js  clipboard.js
my-custom-theme/css/: pico.min.css
pink-theme/: index.html
src/: auth.rs  error.rs  gui.rs  local-share.code-workspace  main.rs  server.rs
src/routes/: assets.rs  clipboard.rs  download.rs  list.rs  mod.rs  upload.rs
src/utils/: archiver.rs  html.rs  mdns.rs  mod.rs  net.rs  qr.rs
